--- a/package.json
+++ b/package.json
@@ -1,36 +1,46 @@
 {
-  "_from": "git+https://github.com/machatzge/TranscriptEditor.git",
-  "_id": "mango-react-transcript-editor@1.7.1",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/mango-react-transcript-editor",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "https://github.com/machatzge/TranscriptEditor.git",
-    "rawSpec": "https://github.com/machatzge/TranscriptEditor.git",
-    "saveSpec": "git+https://github.com/machatzge/TranscriptEditor.git",
-    "fetchSpec": "https://github.com/machatzge/TranscriptEditor.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
+  "name": "mango-react-transcript-editor",
+  "description": "A React component to make transcribing audio and video easier and faster.",
+  "version": "1.7.1",
+  "keywords": [
+    "transcript",
+    "transcriptions",
+    "react",
+    "speech",
+    "speech to text",
+    "textAV"
   ],
-  "_resolved": "git+https://github.com/machatzge/TranscriptEditor.git#e5d4ec9e8b821e1dd4429a3f033abe53eff57d44",
-  "_spec": "https://github.com/machatzge/TranscriptEditor.git",
-  "_where": "C:\\Users\\malte\\IdeaProjects\\mango-transcribe-react-frontend",
-  "author": {
-    "name": "machatzge"
+  "main": "index.js",
+  "scripts": {
+    "start": "npm run storybook",
+    "storybook": "start-storybook -p 6006",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:ci": "jest --ci",
+    "lint": "eslint --ignore-path .eslintignore .",
+    "lint:fix": "eslint --ignore-path .eslintignore . --fix",
+    "lint:fix-styles": "prettier-stylelint --write 'packages/**/*.{css,scss}'",
+    "build:component": "webpack --config webpack.config.js",
+    "build:storybook": "rimraf build && build-storybook -c .storybook -o build",
+    "build:storybook:serve": "npx serve build",
+    "deploy:ghpages": "rimraf build && npm run build:storybook && gh-pages -d build",
+    "pre:publish": "npm run build:component && /bin/cp -rf package.json dist && /bin/cp -rf README.md dist",
+    "publish:public": "npm run pre:publish && npm publish dist --access public",
+    "publish:dry:run": "npm publish --dry-run"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "bundleDependencies": false,
-  "componentsDefaultDirectory": "components/{name}",
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -50,8 +60,10 @@
     "sbd": "^1.0.15",
     "smpte-timecode": "^1.2.3"
   },
-  "deprecated": false,
-  "description": "A React component to make transcribing audio and video easier and faster.",
+  "peerDependencies": {
+    "react": "^16.6.0",
+    "react-dom": "^16.8.6"
+  },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
@@ -94,50 +106,13 @@
     "webpack-cli": "^3.3.9",
     "why-did-you-update": "^1.0.6"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
-  },
-  "keywords": [
-    "transcript",
-    "transcriptions",
-    "react",
-    "speech",
-    "speech to text",
-    "textAV"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
   ],
-  "main": "index.js",
-  "name": "mango-react-transcript-editor",
+  "componentsDefaultDirectory": "components/{name}",
   "packageManager": "npm",
-  "peerDependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.8.6"
-  },
-  "scripts": {
-    "build:component": "webpack --config webpack.config.js",
-    "build:storybook": "rimraf build && build-storybook -c .storybook -o build",
-    "build:storybook:serve": "npx serve build",
-    "deploy:ghpages": "rimraf build && npm run build:storybook && gh-pages -d build",
-    "lint": "eslint --ignore-path .eslintignore .",
-    "lint:fix": "eslint --ignore-path .eslintignore . --fix",
-    "lint:fix-styles": "prettier-stylelint --write 'packages/**/*.{css,scss}'",
-    "pre:publish": "npm run build:component && /bin/cp -rf package.json dist && /bin/cp -rf README.md dist",
-    "publish:dry:run": "npm publish --dry-run",
-    "publish:public": "npm run pre:publish && npm publish dist --access public",
-    "start": "npm run storybook",
-    "storybook": "start-storybook -p 6006",
-    "test": "jest",
-    "test:ci": "jest --ci",
-    "test:watch": "jest --watchAll"
-  },
-  "version": "1.7.1"
+  "author": "machatzge"
 }
